moving to gradle